helm C-x C-f added to Helm section

--- a/settings.org
+++ b/settings.org
@@ -24,10 +24,12 @@
 
 
 * HELM
+
 #+BEGIN_SRC emacs-lisp
 (require 'helm-config)
 (helm-mode 1)
-(global-set-key (kbd "M-x") 'helm-M-x)
+(global-set-key (kbd "M-x") 'helm-M-x) ;;M-x replaced
+(global-set-key (kbd "C-x C-f") 'helm-find-files) ;; Find Files replaced
 #+END_SRC
 
 
